# notarize

./: .aider.conf.yml  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Makefile  README.md  action.yml  ai-catalog.json  mkdocs.yml  openapi.yaml  pyproject.toml  smithery.yaml  smoke_test.py
.claude/commands/: domain.md
.continue/: config.json
.cursor/rules/: project.mdc
.github/: copilot-instructions.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
assets/: demo.tape
docs/: api-reference.md  architecture.md  cli-reference.md  contributing.md  github-action.md  index.md  mcp.md  openai.md  quickstart.md
docs/case-studies/: fintech-agent-forensics.md  healthcare-hipaa-compliance.md
examples/: agent_behavior_forensics.py  compliance_audit_trail.py  demo.py  multi_agent_provenance.py
src/notarize/: __init__.py  api.py  audit.py  cli.py  compare.py  mcp_server.py  report.py  scrubber.py  store.py  timeline.py  verifier.py
src/tracemarket/: __init__.py  api.py  cli.py  mcp_server.py  report.py  scrubber.py  store.py  trace.py  verifier.py
submissions/02_aaif_registry/: server.json
tests/: conftest.py  test_api.py  test_audit.py  test_cli_runner.py  test_compare.py  test_report.py  test_scrubber.py  test_store.py  test_timeline.py  test_trace.py  test_verifier.py
tools/: openai-tools.json
