[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notarize-ai"
version = "0.1.1"
description = "Canonical trace format and verifier for agent execution attestation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Sandeep Alluru", email = "onepuncchh@gmail.com" }]
keywords = [
    "llm", "agents", "ai", "trace-verification", "audit", "attestation",
    "eu-ai-act", "compliance", "mcp", "llmops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "fastapi>=0.110",
    "httpx>=0.27",
]
mcp = ["mcp>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
notarize = "notarize.cli:main"
notarize-mcp = "notarize.mcp_server:run_server"

[project.urls]
Homepage      = "https://github.com/sandeep-alluru/notarize"
Repository    = "https://github.com/sandeep-alluru/notarize"
Documentation = "https://sandeep-alluru.github.io/notarize"
Changelog     = "https://github.com/sandeep-alluru/notarize/blob/main/CHANGELOG.md"
Issues        = "https://github.com/sandeep-alluru/notarize/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/notarize"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "N",    # pep8 naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-native rules
    "PT",   # flake8-pytest-style
]
ignore = [
    "S101",  # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"examples/**" = ["S101", "T201"]

[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
warn_return_any        = true
warn_unused_ignores      = true
warn_unused_configs      = true
disallow_any_generics    = true
check_untyped_defs       = true
disallow_untyped_defs    = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=notarize --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source   = ["notarize"]
branch   = true
omit     = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
fail_under   = 85
show_missing = true
